<resources>
    <string name="app_name">EskuvoiHelyszinLefoglalo</string>
    <string name="regisztr_ci">Regisztráció</string>
    <string name="email">Email</string>
    <string name="fi_k">Fiók</string>
    <string name="inf_k">Infók</string>
    <string name="f_oldal">Főoldal</string>
    <string name="bejelentkez_s">Bejelentkezés</string>
    <string name="jelsz">Jelszó</string>
    <string name="m_r_van_fi_kom">Már van fiókom</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="m_g_nincs_fi_kom">Még nincs fiókom</string>
    <string name="vezet_kn_v">Vezetéknév</string>
    <string name="keresztn_v">Keresztnév</string>
    <string name="jelsz_m_gegyszer">Jelszó mégegyszer</string>
    <string name="telefonsz_m">Telefonszám</string>
    <string name="pontpontpont">...Töltés</string>
    <string name="kijelentkez_s">Kijelentkezés</string>
    <string name="n_v">Név</string>
    <string name="v_ros">Város</string>
    <string name="c_m">Cím</string>
    <string name="le_r_s">Leírás</string>
    <string name="felt_lt_s">Feltöltés</string>
    <string name="fot_felt_lt_s">Fotó feltöltés!</string>
    <string name="rdekl_d_s">Érdeklődés</string>
    <string name="foglal_sok">Foglalások megjelenítése</string>
    <string name="elfogad_s_elutas_t_s">Elfogadás/Elutasítás</string>
    <string name="t_rl_s">Törlés</string>
    <string name="esk_v_i_helysz_nek">Esküvői helyszínek</string>
    <string name="emberek_sz_ma">Emberek száma</string>
    <string name="foglal_s">Foglalás</string>
    <string name="foglal_s_t_rl_se">Foglalás törlése</string>
</resources>