<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:icon="@drawable/infoicon"
        android:title="@string/inf_k" />
    <item
        android:id="@+id/nav_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/f_oldal"
        android:enabled="true"
        android:icon="@drawable/cheers"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/nav_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:title="@string/fi_k"
        android:icon="@drawable/profileicon"/>
</menu>