<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.auth.RegistActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/regisztr_ci"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/pacifico"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/vezet_kn_v"
            android:inputType="text"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/keresztn_v"
            android:inputType="text"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/telefonsz_m"
            android:inputType="phone"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/jelsz"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordAgainInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/jelsz_m_gegyszer"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:onClick="gotoLogin"
            android:text="@string/m_r_van_fi_kom" />

        <Button
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:onClick="regist"
            android:text="@string/regisztr_ci" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/nav_items" />

</androidx.constraintlayout.widget.ConstraintLayout>