<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.auth.LoginActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bejelentkez_s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginTop="200dp"
        style="@style/TextAppearance.AppCompat.Title"
        android:fontFamily="@font/pacifico"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailInput"
                style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/jelsz">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword"
                android:textAlignment="center" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="219dp"
            android:layout_height="50dp"
            android:onClick="gotoReg"
            android:text="@string/m_g_nincs_fi_kom" />

        <Button
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:onClick="login"
            android:text="@string/bejelentkez_s" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/nav_items" />

</androidx.constraintlayout.widget.ConstraintLayout>